Chat to get answers fo a Lit Review

--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -19,27 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AzureInferenceClient initialized\n",
-      "https://models.inference.ai.azure.com\n",
-      "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\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "client = AzureInferenceClient()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T03:56:13.545850Z",
-     "start_time": "2024-09-03T03:56:13.409283Z"
-    }
+    "collapsed": false
    }
   },
   {
