Chat to get answers fo a Lit Review

--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -5,38 +5,48 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T03:56:13.404994Z",
-     "start_time": "2024-09-03T03:56:13.279325Z"
+     "end_time": "2024-09-03T11:48:44.287854Z",
+     "start_time": "2024-09-03T11:48:44.149806Z"
     }
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
     "\n",
     "from app.src.api_client import AzureInferenceClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AzureInferenceClient initialized\n"
+     ]
+    }
+   ],
    "source": [
     "client = AzureInferenceClient()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T11:48:44.444324Z",
+     "start_time": "2024-09-03T11:48:44.293750Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "'Analyzing the references provided, I notice that they cover a wide range of topics related to vaccine supply chains, including:\\n\\n* Optimization of vaccine distribution and allocation\\n* Design of vaccine supply chain networks\\n* Management of vaccine inventory and production\\n* Strategies for mitigating the COVID-19 pandemic\\n* Multi-objective and multi-criterion approaches to vaccination planning\\n* Application of artificial intelligence and robust optimization techniques\\n\\nConsidering the diversity of topics and the fact that all references are from reputable academic journals, I infer that the survey paper is likely to be a comprehensive review of the state-of-the-art in vaccine supply chain research.\\n\\nTitle: A Systematic Review of Vaccine Supply Chain Optimization: Models, Methods, and Applications.'"
+      "text/plain": "'Based on the references provided, I notice that they all relate to the topic of vaccine supply chains, with a focus on optimization, distribution, and logistics. Many of the articles also specifically address the COVID-19 pandemic.\\n\\nI see a range of methodologies and approaches being used, including mathematical modeling, simulation, and machine learning. Some articles focus on specific aspects of vaccine supply chains, such as cold chain management, inventory control, and transportation.\\n\\nGiven the diversity of topics and approaches, I\\'m going to take a guess that the survey paper is a comprehensive review of the literature on vaccine supply chains, covering various aspects of the field.\\n\\nTitle: \"Vaccine Supply Chain Optimization: A Comprehensive Review of Models, Methods, and Applications\"'"
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,20 +92,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T04:06:27.127274Z",
-     "start_time": "2024-09-03T04:06:14.420071Z"
+     "end_time": "2024-09-03T11:48:59.245644Z",
+     "start_time": "2024-09-03T11:48:44.450785Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "'* Introduction\\n* Background and Context: Vaccine Supply Chains and COVID-19\\n* Literature Review Methodology\\n* Vaccine Supply Chain Design and Optimization\\n* Vaccine Distribution and Allocation Strategies\\n* Inventory Management and Production Planning in Vaccine Supply Chains\\n* Emerging Trends and Technologies in Vaccine Supply Chain Management\\n* Case Studies and Applications of Vaccine Supply Chain Optimization\\n* Future Research Directions and Conclusion'"
+      "text/plain": "'* Introduction\\n* Vaccine Supply Chain Overview\\n* Optimization Models for Vaccine Distribution\\n* Cold Chain Management and Logistics\\n* Inventory Control and Management\\n* Transportation and Routing Optimization\\n* Case Studies and Applications\\n* Challenges and Future Directions\\n* Conclusion'"
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,20 +128,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T04:08:54.239694Z",
-     "start_time": "2024-09-03T04:08:46.893075Z"
+     "end_time": "2024-09-03T11:49:03.962642Z",
+     "start_time": "2024-09-03T11:48:59.242349Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "'The rapid spread of infectious diseases, such as COVID-19, has highlighted the need for efficient and effective vaccine supply chains to ensure timely and equitable access to vaccines. In response, researchers have been actively exploring various optimization models, methods, and applications to improve vaccine supply chain performance. This systematic review aims to provide a comprehensive overview of the existing literature on vaccine supply chain optimization, covering topics such as supply chain design, distribution and allocation strategies, inventory management and production planning, as well as emerging trends and technologies. The review methodology involves a thorough analysis of 20 relevant studies, including case studies and applications of vaccine supply chain optimization in various contexts. The findings highlight the importance of considering multiple factors, such as vaccine availability, demand, and storage capacity, when designing and optimizing vaccine supply chains. The review also identifies a range of optimization models and methods, including mathematical programming, simulation, and machine learning, that have been applied to vaccine supply chain problems. Furthermore, the review discusses the role of emerging trends and technologies, such as artificial intelligence and the Internet of Things, in enhancing vaccine supply chain performance. Overall, this systematic review provides a valuable resource for researchers, policymakers, and practitioners seeking to improve vaccine supply chain efficiency and effectiveness, ultimately contributing to better public health outcomes.'"
+      "text/plain": "'Vaccine supply chain optimization is a critical component of ensuring the timely and equitable distribution of vaccines, particularly in the context of pandemics such as COVID-19. As the global vaccine market continues to grow, the complexity of vaccine supply chains has increased, necessitating the development of sophisticated optimization models and methods to ensure efficient and effective vaccine distribution. This systematic review provides a comprehensive overview of the current state of vaccine supply chain optimization, including vaccine distribution and allocation strategies, inventory management and production planning, and emerging trends and technologies in vaccine supply chain management. The review highlights the application of various optimization models and methods, including mathematical programming, simulation, and machine learning, to address the unique challenges of vaccine supply chains, such as cold chain management, transportation, and inventory control. The review also examines case studies and applications of vaccine supply chain optimization in various contexts, including low- and middle-income countries, and identifies future research directions in this field. By synthesizing the existing literature on vaccine supply chain optimization, this review aims to provide a foundation for the development of more effective and efficient vaccine supply chain systems, ultimately contributing to improved vaccine access and health outcomes globally.'"
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,20 +173,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T04:14:52.109843Z",
-     "start_time": "2024-09-03T04:14:26.398594Z"
+     "end_time": "2024-09-03T11:49:21.791063Z",
+     "start_time": "2024-09-03T11:49:03.969391Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "'Based on the content of the references, I recommend the following ones for the section \"Introduction * Background and Context\":\\n\\n* [1] Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817.\\n* [2] Lee, B.Y., Cakouros, B.E., Assi, T.M., Connor, D.L., Welling, J., Kone, S., Djibo, A., Wateska, A.R., Pierre, L., Brown, S.T., 2012. The impact of making vaccines thermostable in niger’s vaccine supply chain. Vaccine 30, 38, 5637–5643.\\n* [4] Kis, Z., Kontoravdi, C., Shattock, R., Shah, N., 2020. Resources, production scales and time required for producing rna vaccines for the global pandemic demand. Vaccines 9, 1, 3.\\n* [11] Rahman, H.F., Chakrabortty, R.K., Paul, S.K., Elsawah, S., 2023. Optimising vaccines supply chains to mitigate the covid-19 pandemic. International Journal of Systems Science: Operations & Logistics 10, 1, 2122757.\\n\\nThese references provide a good background on the challenges of vaccine supply chains, the importance of vaccine thermostability, and the need for optimization in vaccine supply chains, particularly in the context of the COVID-19 pandemic.'"
+      "text/plain": "'Based on the provided references, I suggest the following ones might be useful for the section \"Introduction * Background and Context\":\\n\\n* Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817. [1]\\n* Kis, Z., Kontoravdi, C., Shattock, R., Shah, N., 2020. Resources, production scales and time required for producing rna vaccines for the global pandemic demand. Vaccines 9, 1, 3. [4]\\n* Tavana, M., Govindan, K., Nasr, A.K., Heidary, M.S., Mina, H., 2021. A mathematical programming approach for equitable covid-19 vaccine distribution in developing countries. Annals of Operations Research [8]\\n* Dastgoshade, S., Shafiee, M., Klibi, W., Shishebori, D., 2022. Social equity-based distribution networks design for the covid19 vaccine. International Journal of Production Economics 250, 108684. [10]\\n* Fadaki, M., Abareshi, A., Far, S.M., Lee, P.T.W., 2022. Multi-period vaccine allocation model in a pandemic: A case study of covid-19 in australia. Transportation Research Part E: Logistics and Transportation Review 161, 102689. [20]\\n\\nThese references provide background information on vaccine supply chains, the impact of COVID-19 on vaccine distribution, and the challenges of vaccine allocation and distribution in different contexts.'"
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,20 +210,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T04:20:38.390645Z",
-     "start_time": "2024-09-03T04:20:05.961872Z"
+     "end_time": "2024-09-03T11:49:59.373495Z",
+     "start_time": "2024-09-03T11:49:21.791267Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "\"Based on the references provided, I've identified the following techniques and methods that might be useful for the section 'Supply chain design':\\n\\n1. **Mathematical modeling**: Used in [6] Demirci, E.Z., Erkip, N.K., 2020 to design an intervention scheme for vaccine market.\\n2. **Mixed-integer linear programming (MILP)**: Used in [9] Goodarzian, F., Navaei, A., Ehsani, B., Ghasemi, P., Mu˜ nuzuri, J., 2022 to design an integrated responsive-green-cold vaccine supply chain network.\\n3. **Simulation modeling**: Used in [7] Lin, Q., Zhao, Q., Lev, B., 2020 to evaluate the cold chain transportation decision in the vaccine supply chain.\\n4. **Network flow model**: Used in [5] Hovav, S., Tsadikovich, D., 2015 to optimize the inventory management and distribution of influenza vaccines.\\n5. **Bi-objective optimization**: Used in [16] Kayvanfar, V., Husseini, S.M., Karimi, B., Sajadieh, M.S., 2017 to design a multi-echelon supply chain for vaccine distribution.\\n6. **Location-allocation model**: Used in [15] Lim, J., Claypool, E., Norman, B.A., Rajgopal, J., 2016 to determine the optimal location of vaccination centers in low and middle-income countries.\\n7. **Stochastic programming**: Used in [13] Basciftci, B., Yu, X., Shen, S., 2023 to optimize the resource distribution under spatiotemporal uncertainty of disease spread.\\n\\nThese techniques and methods can be useful in designing and optimizing vaccine supply chains, and can be applied to various contexts, such as vaccine distribution, inventory management, and supply chain network design.\""
+      "text/plain": "\"Based on the provided references, I've extracted the techniques and methods related to supply chain design that might be useful for your section:\\n\\n1. **Mathematical Programming**:\\n\\t* Mixed-Integer Linear Programming (MILP) [8, 10]\\n\\t* Linear Programming (LP) [1]\\n2. **Optimization Models**:\\n\\t* Vaccine allocation models [4, 8, 10, 20]\\n\\t* Distribution network design models [10, 20]\\n\\t* Inventory management models [1, 4]\\n3. **Simulation Models**:\\n\\t* Discrete-Event Simulation (DES) [not explicitly mentioned, but might be relevant]\\n4. **Machine Learning**:\\n\\t* Not explicitly mentioned in the provided references, but might be relevant for supply chain design\\n5. **Heuristics and Metaheuristics**:\\n\\t* Not explicitly mentioned in the provided references, but might be relevant for supply chain design\\n6. **Network Analysis**:\\n\\t* Social Network Analysis (SNA) [not explicitly mentioned, but might be relevant]\\n\\t* Network optimization models [10, 20]\\n7. **Decision Analysis**:\\n\\t* Multi-Criteria Decision Analysis (MCDA) [not explicitly mentioned, but might be relevant]\\n\\t* Decision support systems [10, 20]\\n\\nThese techniques and methods are used to address various aspects of supply chain design, such as:\\n\\n* Vaccine allocation and distribution\\n* Inventory management\\n* Distribution network design\\n* Supply chain optimization\\n\\nPlease note that this is not an exhaustive list, and you may want to consider other techniques and methods relevant to supply chain design. Additionally, some references might be more relevant to specific sub-topics within supply chain design.\""
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,18 +245,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T04:28:43.155875Z",
-     "start_time": "2024-09-03T04:28:09.979148Z"
+     "end_time": "2024-09-03T11:50:27.022046Z",
+     "start_time": "2024-09-03T11:49:59.379111Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T11:50:27.029228Z",
+     "start_time": "2024-09-03T11:50:27.020487Z"
+    }
    }
   }
  ],
