--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:48:44.287854Z",
-     "start_time": "2024-09-03T11:48:44.149806Z"
+     "end_time": "2024-09-03T15:53:36.712734Z",
+     "start_time": "2024-09-03T15:53:36.570546Z"
     }
    },
    "outputs": [],
@@ -18,6 +18,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:53:38.422955Z",
+     "start_time": "2024-09-03T15:53:38.302800Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -28,23 +35,26 @@
     }
    ],
    "source": [
-    "client = AzureInferenceClient()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:48:44.444324Z",
-     "start_time": "2024-09-03T11:48:44.293750Z"
-    }
-   }
+    "client = AzureInferenceClient(model=\"meta-llama-3.1-405b-instruct\",\n",
+    "        temperature=0.7,\n",
+    "        max_tokens=4096,\n",
+    "        top_p=1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:54:04.189980Z",
+     "start_time": "2024-09-03T15:53:50.021250Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'Based on the references provided, I notice that they all relate to the topic of vaccine supply chains, with a focus on optimization, distribution, and logistics. Many of the articles also specifically address the COVID-19 pandemic.\\n\\nI see a range of methodologies and approaches being used, including mathematical modeling, simulation, and machine learning. Some articles focus on specific aspects of vaccine supply chains, such as cold chain management, inventory control, and transportation.\\n\\nGiven the diversity of topics and approaches, I\\'m going to take a guess that the survey paper is a comprehensive review of the literature on vaccine supply chains, covering various aspects of the field.\\n\\nTitle: \"Vaccine Supply Chain Optimization: A Comprehensive Review of Models, Methods, and Applications\"'"
+      "text/plain": "'After analyzing the references, I notice that they are all related to vaccine supply chains, COVID-19, and operations research. Many of the articles are from top-tier journals in the field of operations research and management science.\\n\\nI see a mix of topics, including vaccine distribution, supply chain optimization, scheduling, and resource allocation. Some articles focus on specific aspects, such as cold chain transportation, inventory management, and vaccine allocation.\\n\\nMany of the articles are from recent years, indicating that the survey paper is likely to be a comprehensive review of the latest research in the field of vaccine supply chains.\\n\\nWith these observations in mind, I\\'m going to take a guess that the title of the survey paper is:\\n\\nTitle: \"Vaccine Supply Chain Optimization: A Review of Recent Advances and Future Directions\"'"
      },
      "execution_count": 3,
      "metadata": {},
@@ -81,29 +91,25 @@
     "\"\"\"\n",
     "client.append_user_message(message)\n",
     "response = client.complete(\n",
-    "        messages=client.message_chain,\n",
-    "        model=\"meta-llama-3.1-405b-instruct\",\n",
-    "        temperature=0.7,\n",
-    "        max_tokens=4096,\n",
-    "        top_p=1\n",
+    "        messages=client.message_chain\n",
     "    )\n",
     "response\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:48:59.245644Z",
-     "start_time": "2024-09-03T11:48:44.450785Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:54:14.721537Z",
+     "start_time": "2024-09-03T15:54:07.268942Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'* Introduction\\n* Vaccine Supply Chain Overview\\n* Optimization Models for Vaccine Distribution\\n* Cold Chain Management and Logistics\\n* Inventory Control and Management\\n* Transportation and Routing Optimization\\n* Case Studies and Applications\\n* Challenges and Future Directions\\n* Conclusion'"
+      "text/plain": "'Here is my guess for the outline of the paper:\\n\\n* Introduction\\n* Vaccine Supply Chain Challenges and Opportunities\\n* Literature Review: Vaccine Distribution and Allocation\\n* Optimization Models for Vaccine Supply Chain Management\\n* Cold Chain Logistics and Transportation Management\\n* Inventory Management and Control in Vaccine Supply Chains\\n* Case Studies and Applications in Real-World Settings\\n* Future Research Directions and Emerging Trends\\n* Conclusion and Implications for Practice and Policy'"
      },
      "execution_count": 4,
      "metadata": {},
@@ -117,29 +123,25 @@
     "No item number is required, each first-level heading begins with “* ”.\"\"\"\n",
     "client.append_user_message(new_message)\n",
     "response = client.complete(\n",
-    "        messages=client.message_chain,\n",
-    "        model=\"meta-llama-3.1-405b-instruct\",\n",
-    "        temperature=0.7,\n",
-    "        max_tokens=4096,\n",
-    "        top_p=1\n",
+    "        messages=client.message_chain\n",
     "    )\n",
     "response"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:49:03.962642Z",
-     "start_time": "2024-09-03T11:48:59.242349Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:54:35.513185Z",
+     "start_time": "2024-09-03T15:54:14.722773Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'Vaccine supply chain optimization is a critical component of ensuring the timely and equitable distribution of vaccines, particularly in the context of pandemics such as COVID-19. As the global vaccine market continues to grow, the complexity of vaccine supply chains has increased, necessitating the development of sophisticated optimization models and methods to ensure efficient and effective vaccine distribution. This systematic review provides a comprehensive overview of the current state of vaccine supply chain optimization, including vaccine distribution and allocation strategies, inventory management and production planning, and emerging trends and technologies in vaccine supply chain management. The review highlights the application of various optimization models and methods, including mathematical programming, simulation, and machine learning, to address the unique challenges of vaccine supply chains, such as cold chain management, transportation, and inventory control. The review also examines case studies and applications of vaccine supply chain optimization in various contexts, including low- and middle-income countries, and identifies future research directions in this field. By synthesizing the existing literature on vaccine supply chain optimization, this review aims to provide a foundation for the development of more effective and efficient vaccine supply chain systems, ultimately contributing to improved vaccine access and health outcomes globally.'"
+      "text/plain": "'Vaccine supply chain optimization has become a critical concern in ensuring the effective distribution and administration of vaccines, particularly in the context of global pandemics such as COVID-19. With the increasing demand for vaccines, the complexities of vaccine supply chains have become more pronounced, necessitating the development of innovative models, methods, and applications to optimize their performance. Recent studies have focused on designing and optimizing vaccine supply chains, taking into account factors such as cold chain logistics, transportation management, and inventory control. Various distribution and allocation strategies have been proposed, including multi-objective optimization models and stochastic programming approaches, to ensure equitable and efficient vaccine distribution. Furthermore, emerging trends and technologies, such as the Internet of Things (IoT), artificial intelligence (AI), and blockchain, have been explored for their potential to enhance vaccine supply chain management. Case studies and applications have demonstrated the effectiveness of these approaches in real-world settings, highlighting the need for further research and development in this area. This systematic review aims to provide a comprehensive overview of the current state of vaccine supply chain optimization, highlighting the key models, methods, and applications that have been developed to address the complex challenges of vaccine distribution and administration. By synthesizing the existing literature, this review seeks to identify future research directions and inform the development of more effective vaccine supply chain management strategies.'"
      },
      "execution_count": 5,
      "metadata": {},
@@ -162,29 +164,25 @@
     "\n",
     "client.append_user_message(prompt3)\n",
     "response = client.complete(\n",
-    "        messages=client.message_chain,\n",
-    "        model=\"meta-llama-3.1-405b-instruct\",\n",
-    "        temperature=0.7,\n",
-    "        max_tokens=4096,\n",
-    "        top_p=1\n",
+    "        messages=client.message_chain\n",
     "    )\n",
     "response"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:49:21.791063Z",
-     "start_time": "2024-09-03T11:49:03.969391Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:55:09.202182Z",
+     "start_time": "2024-09-03T15:54:35.515113Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'Based on the provided references, I suggest the following ones might be useful for the section \"Introduction * Background and Context\":\\n\\n* Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817. [1]\\n* Kis, Z., Kontoravdi, C., Shattock, R., Shah, N., 2020. Resources, production scales and time required for producing rna vaccines for the global pandemic demand. Vaccines 9, 1, 3. [4]\\n* Tavana, M., Govindan, K., Nasr, A.K., Heidary, M.S., Mina, H., 2021. A mathematical programming approach for equitable covid-19 vaccine distribution in developing countries. Annals of Operations Research [8]\\n* Dastgoshade, S., Shafiee, M., Klibi, W., Shishebori, D., 2022. Social equity-based distribution networks design for the covid19 vaccine. International Journal of Production Economics 250, 108684. [10]\\n* Fadaki, M., Abareshi, A., Far, S.M., Lee, P.T.W., 2022. Multi-period vaccine allocation model in a pandemic: A case study of covid-19 in australia. Transportation Research Part E: Logistics and Transportation Review 161, 102689. [20]\\n\\nThese references provide background information on vaccine supply chains, the impact of COVID-19 on vaccine distribution, and the challenges of vaccine allocation and distribution in different contexts.'"
+      "text/plain": "'Based on the provided references, here are some that might be useful when writing the \"Introduction\" section, specifically the \"Background and Context\" part:\\n\\n* [1] Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817.\\n* [2] Lee, B.Y., Cakouros, B.E., Assi, T.M., Connor, D.L., Welling, J., Kone, S., Djibo, A., Wateska, A.R., Pierre, L., Brown, S.T., 2012. The impact of making vaccines thermostable in niger’s vaccine supply chain. Vaccine 30, 38, 5637–5643.\\n* [4] Kis, Z., Kontoravdi, C., Shattock, R., Shah, N., 2020. Resources, production scales and time required for producing rna vaccines for the global pandemic demand. Vaccines 9, 1, 3.\\n* [11] Rahman, H.F., Chakrabortty, R.K., Paul, S.K., Elsawah, S., 2023. Optimising vaccines supply chains to mitigate the covid-19 pandemic. International Journal of Systems Science: Operations & Logistics 10, 1, 2122757.\\n* [20] Fadaki, M., Abareshi, A., Far, S.M., Lee, P.T.W., 2022. Multi-period vaccine allocation model in a pandemic: A case study of covid-19 in australia. Transportation Research Part E: Logistics and Transportation Review 161, 102689.\\n\\nThese references provide context on vaccine supply chain challenges, vaccine production, and the impact of the COVID-19 pandemic on vaccine supply chains.'"
      },
      "execution_count": 6,
      "metadata": {},
@@ -199,29 +197,25 @@
     "\"\"\"\n",
     "client.append_user_message(prompt4)\n",
     "response = client.complete(\n",
-    "        messages=client.message_chain,\n",
-    "        model=\"meta-llama-3.1-405b-instruct\",\n",
-    "        temperature=0.7,\n",
-    "        max_tokens=4096,\n",
-    "        top_p=1\n",
+    "        messages=client.message_chain\n",
     "    )\n",
     "response"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:49:59.373495Z",
-     "start_time": "2024-09-03T11:49:21.791267Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T15:55:58.454863Z",
+     "start_time": "2024-09-03T15:55:09.201704Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "\"Based on the provided references, I've extracted the techniques and methods related to supply chain design that might be useful for your section:\\n\\n1. **Mathematical Programming**:\\n\\t* Mixed-Integer Linear Programming (MILP) [8, 10]\\n\\t* Linear Programming (LP) [1]\\n2. **Optimization Models**:\\n\\t* Vaccine allocation models [4, 8, 10, 20]\\n\\t* Distribution network design models [10, 20]\\n\\t* Inventory management models [1, 4]\\n3. **Simulation Models**:\\n\\t* Discrete-Event Simulation (DES) [not explicitly mentioned, but might be relevant]\\n4. **Machine Learning**:\\n\\t* Not explicitly mentioned in the provided references, but might be relevant for supply chain design\\n5. **Heuristics and Metaheuristics**:\\n\\t* Not explicitly mentioned in the provided references, but might be relevant for supply chain design\\n6. **Network Analysis**:\\n\\t* Social Network Analysis (SNA) [not explicitly mentioned, but might be relevant]\\n\\t* Network optimization models [10, 20]\\n7. **Decision Analysis**:\\n\\t* Multi-Criteria Decision Analysis (MCDA) [not explicitly mentioned, but might be relevant]\\n\\t* Decision support systems [10, 20]\\n\\nThese techniques and methods are used to address various aspects of supply chain design, such as:\\n\\n* Vaccine allocation and distribution\\n* Inventory management\\n* Distribution network design\\n* Supply chain optimization\\n\\nPlease note that this is not an exhaustive list, and you may want to consider other techniques and methods relevant to supply chain design. Additionally, some references might be more relevant to specific sub-topics within supply chain design.\""
+      "text/plain": "\"Based on the provided references, here are some techniques and methods that might be useful when writing the content for the section 'Supply chain design':\\n\\n* Optimization models:\\n\\t+ Linear programming (LP) [1]\\n\\t+ Mixed-integer linear programming (MILP) [2, 11]\\n\\t+ Stochastic programming (SP) [4]\\n* Distribution and allocation strategies:\\n\\t+ Multi-objective optimization [11]\\n\\t+ Heuristics [2]\\n\\t+ Simulation-based optimization [4]\\n* Network design:\\n\\t+ Hub-and-spoke network design [2]\\n\\t+ Cold chain network design [1]\\n* Inventory management:\\n\\t+ Economic order quantity (EOQ) model [1]\\n\\t+ Just-in-time (JIT) inventory management [2]\\n* Transportation management:\\n\\t+ Vehicle routing problem (VRP) [11]\\n\\t+ Transportation network optimization [4]\\n* Risk management:\\n\\t+ Stochastic programming [4]\\n\\t+ Robust optimization [11]\\n* Supply chain resilience:\\n\\t+ Supply chain risk management [2]\\n\\t+ Supply chain disruption management [11]\\n\\nThese techniques and methods can be used to design and optimize vaccine supply chains, taking into account factors such as cold chain logistics, transportation management, inventory control, and risk management.\\n\\nReferences:\\n\\n* [1] Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817.\\n* [2] Lee, B.Y., Cakouros, B.E., Assi, T.M., Connor, D.L., Welling, J., Kone, S., Djibo, A., Wateska, A.R., Pierre, L., Brown, S.T., 2012. The impact of making vaccines thermostable in niger’s vaccine supply chain. Vaccine 30, 38, 5637–5643.\\n* [4] Kis, Z., Kontoravdi, C., Shattock, R., Shah, N., 2020. Resources, production scales and time required for producing rna vaccines for the global pandemic demand. Vaccines 9, 1, 3.\\n* [11] Rahman, H.F., Chakrabortty, R.K., Paul, S.K., Elsawah, S., 2023. Optimising vaccines supply chains to mitigate the covid-19 pandemic. International Journal of Systems Science: Operations & Logistics 10, 1, 2122757.\""
      },
      "execution_count": 7,
      "metadata": {},
@@ -234,39 +228,28 @@
     "\"\"\"\n",
     "client.append_user_message(prompt5)\n",
     "response = client.complete(\n",
-    "        messages=client.message_chain,\n",
-    "        model=\"meta-llama-3.1-405b-instruct\",\n",
-    "        temperature=0.7,\n",
-    "        max_tokens=4096,\n",
-    "        top_p=1\n",
+    "        messages=client.message_chain\n",
     "    )\n",
     "response"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T11:50:27.022046Z",
-     "start_time": "2024-09-03T11:49:59.379111Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [],
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:50:27.029228Z",
-     "start_time": "2024-09-03T11:50:27.020487Z"
+     "end_time": "2024-09-03T15:33:05.540997Z",
+     "start_time": "2024-09-03T15:33:05.535245Z"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -284,5 +267,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
