--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "prompt0 = \"\"\"There is an academic puzzle for you. I will give you a list of references. In subject Vaccine Supply Chains, a survey paper existing with these references. You will give me a guess of the title of the survey paper. Here are the references, each preceded by word ARTICLE and a number:\n",
+    "prompt0 = \"\"\"There is an academic puzzle for you. I will give you a list of references. In subject Vaccine Supply Chains, a survey paper existing with these references. You will give me a guess of the title of the survey paper. Here are the references, each preceded by the word ARTICLE and a number:\n",
     "ARTICLE 1: Lee, B.Y., Assi, T.M., Rookkapan, K., Connor, D.L., Rajgopal, J., Sornsrivichai, V., Brown, S.T., Welling, J.S., Norman, B.A., Chen, S.I., et al., 2011. Replacing the measles ten-dose vaccine presentation with the single-dose presentation in thailand. Vaccine 29, 21, 3811–3817. \n",
     "ARTICLE 2:  Lee, B.Y., Cakouros, B.E., Assi, T.M., Connor, D.L., Welling, J., Kone, S., Djibo, A., Wateska, A.R., Pierre, L., Brown, S.T., 2012. The impact of making vaccines thermostable in niger’s vaccine supply chain. Vaccine 30, 38, 5637–5643. \n",
     "ARTICLE 3: Sun, H., Toyasaki, F., Falagara Sigala, I., 2023. Incentivizing at-risk production capacity building for covid-19 vaccines. Production and Operations Management 32, 5, 1550–1566. \n",
@@ -142,7 +142,7 @@
     "I am writing a survey paper titled with A Systematic Review of Vaccine Supply Chain Optimization: Models, Methods, and Applications..\n",
     "Here is my outline : \n",
     "\n",
-    " Introduction\\n* Background and Context\\n* Literature Review Methodology\\n* Vaccine Supply Chain Design and Optimization\\n* Vaccine Distribution and Allocation Strategies\\n* Inventory Management and Production Planning in Vaccine Supply Chains\\n* Emerging Trends and Technologies in Vaccine Supply Chain Management\\n* Case Studies and Applications of Vaccine Supply Chain Optimization\\n* Future Research Directions and Conclusion\n",
+    " {Introduction\\n* Background and Context\\n* Literature Review Methodology\\n* Vaccine Supply Chain Design and Optimization\\n* Vaccine Distribution and Allocation Strategies\\n* Inventory Management and Production Planning in Vaccine Supply Chains\\n* Emerging Trends and Technologies in Vaccine Supply Chain Management\\n* Case Studies and Applications of Vaccine Supply Chain Optimization\\n* Future Research Directions and Conclusion}\n",
     "\n",
     "Can you write an abstract for me upon the basis of the provided references?\n",
     "You may write only 1 paragraph with about 200-500 words, do not include more\n",
